--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,66 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+    font-family: 'League Spartan', sans-serif;
+    color: black;
+    font:14px;
+  }
+  
+  a {
+    color: #00B7FF;
+  }
+  main{
+    margin-top: 25px;
+  }
+  
+  fieldset{
+    margin: 20px;
+  }
+  .navbar-dark{
+    background-color: darkblue;
+  }
+  .navbar-dark .navbar-brand:hover, .navbar-dark .nav-item:hover .nav-link{
+      color: #FFCB05;
+  }
+  ul{
+    list-style: none;
+  }
+  .row{
+    display: flex;
+  }
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+   }
+   
+   .form-group {
+    background: tomato;
+    padding: 1em;
+    margin: 1em;
+   }
+   
+   
+   input[type=file] {
+     outline: 0;
+     opacity: 0;
+     pointer-events: none;
+     user-select: none;
+   }
+   
+   .label {
+     width: 120px;
+   height: 100px;
+     border: 2px dashed grey;
+     border-radius: 5px;
+     display: block;
+     padding: 1.2em;
+     transition: border 300ms ease;
+     cursor: pointer;
+     text-align: center;}
+   
+     i {
+       display: block;
+       font-size: 42px;
+       padding-bottom: 16px;
+     }
+     
